--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "author": "Pedro Luka",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.15.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.15.0"
   }
 }
